[gd_scene load_steps=4 format=3 uid="uid://bvlan3m8qpr0k"]

[ext_resource type="Script" uid="uid://c05vk6vqmmp32" path="res://scripts/weapon_system.gd" id="1_weapon_system"]
[ext_resource type="Resource" uid="uid://c7qxm2v8pqb3h" path="res://resources/weapons/basic_pistol.tres" id="2_basic_pistol"]
[ext_resource type="PackedScene" uid="uid://cxvk8m4nqpsaj" path="res://scenes/projectile.tscn" id="3_projectile"]

[node name="WeaponSystem" type="Node2D"]
script = ExtResource("1_weapon_system")
equipped_weapon = ExtResource("2_basic_pistol")
projectile_scene = ExtResource("3_projectile")

[node name="WeaponSprite" type="Sprite2D" parent="."]
position = Vector2(20, 0)

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(30, 0)
